[package]
name = "quickscope"
description = "Multi-layer HashMap and HashSet implementations for performant representation of variable scopes"
categories = ["algorithms", "data-structures"]
keywords = ["scoping", "variable", "hashmap", "hashset", "scope"]
repository = "https://github.com/TheBerkin/quickscope"
license = "MIT"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.6.1"
indexmap = "1.6.1"